故障信息淡入淡出

--- a/netbox_otnfaults/templates/netbox_otnfaults/unified_map.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/unified_map.html
@@ -51,6 +51,10 @@
   rel="stylesheet"
   href="{% static 'netbox_otnfaults/css/otnfault_map_controls.css' %}"
 />
+<link
+  rel="stylesheet"
+  href="{% static 'netbox_otnfaults/css/fault_popup_animations.css' %}"
+/>
 
 <style>
   .maplibregl-popup-close-button:focus {
