OTN路径规划初稿，方案待重构

--- a/netbox_otnfaults/templates/netbox_otnfaults/unified_map.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/unified_map.html
@@ -55,6 +55,12 @@
   rel="stylesheet"
   href="{% static 'netbox_otnfaults/css/fault_popup_animations.css' %}"
 />
+{% if map_mode == 'route_editor' %}
+<link
+  rel="stylesheet"
+  href="{% static 'netbox_otnfaults/css/route_editor.css' %}"
+/>
+{% endif %}
 
 <style>
   .maplibregl-popup-close-button:focus {
